rns-lang/tests/snapshots/diagnostic/err-parser-outside_class_directive-interface_keyword.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
; some comment
; another comment
interface
.class public HelloWorld

----- STDOUT -----

----- STDERR -----
Error: unexpected keyword before class definition
   ╭─[ test_data/diagnostic/err/parser/outside_class_directive/interface_keyword.ja:3:1 ]
   │
 3 │ interface
   │ ────┬────  
   │     ╰────── this keyword must appear inside a class definition
   │ 
   │ Note: Access flags must appear within a '.class' or '.method' directive.
───╯
