rns-lang/tests/snapshots/diagnostic/err-parser-outside_class_directive-public_keyword.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
   public
.class public HelloWorld

----- STDOUT -----

----- STDERR -----
Error: unexpected keyword before class definition
   ╭─[ test_data/diagnostic/err/parser/outside_class_directive/public_keyword.ja:1:4 ]
   │
 1 │    public
   │    ───┬──  
   │       ╰──── this keyword must appear inside a class definition
   │ 
   │ Note: Access flags must appear within a '.class' or '.method' directive.
───╯
